name:                coffee
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:            https://github.com/githubuser/coffee#readme
license:             BSD3
license-file:        LICENSE
author:              Nicholas Hansen
-- maintainer:          example@example.com
copyright:           2017 Nicholas Hansen
-- category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable coffee
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , mersenne-random
                     , Chart
                     , Chart-diagrams
